# spider-mall

./: .env.example  .gitignore  CLAUDE.md  README.md  STARTUP_GUIDE.md  UV_GUIDE.md  example.py  pyproject.toml  start_simple.py  test_env_config.py  test_run.py
.claude/: settings.local.json
database/: schema.sql
src/spidermail/: __init__.py  cli.py  scheduler.py
src/spidermail/config/: __init__.py  settings.py
src/spidermail/database/: __init__.py  connection.py
src/spidermail/models/: __init__.py  crawl_task.py  product.py  review.py
src/spidermail/spiders/: __init__.py  base.py  jd_spider.py  taobao_spider.py
src/spidermail/utils/: __init__.py  data_cleaner.py  exceptions.py  logger.py
