[project]
name = "spidermail"
version = "0.1.0"
description = "E-commerce spider for extracting product and review data from Taobao and JD"
authors = [
    {name = "SpiderMail Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "lxml>=4.9.0",
    "fake-useragent>=1.4.0",
    "retrying>=1.3.4",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "redis>=5.0.0",
    "celery>=5.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0"
]

[project.scripts]
spidermail = "spidermail.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spidermail = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
